# ClaudeLift

./: .gitattributes  .gitignore  LICENSE  README.md  cowork_export.py  pyproject.toml
app/: .gitignore  electron.builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
app/hooks/: sign-sidecar.cjs
app/resources/splash/: splash.html
app/scripts/: build-mcp.mjs  mcp-smoke.mjs
app/src/main/: bundles.ts  engine.ts  index.ts  ipc-handlers.ts  register-bundles.ts  register-mcp.ts  register-notion.ts  register-tasks.ts  state.ts  tray.ts  watcher.ts
app/src/main/notion/: client.ts  exporter.ts
app/src/mcp/: engine.ts  server.ts
app/src/preload/: global.d.ts  index.ts
app/src/renderer/: App.tsx  app.css  index.html  main.tsx  store.ts
app/src/renderer/components/: ConfirmDangerModal.tsx  ExportModal.tsx  ImportModal.tsx  Nav.tsx  PreviewDrawer.tsx  SeedModal.tsx  StatusFooter.tsx  ToastHost.tsx
app/src/renderer/views/: BundlesView.tsx  NotionView.tsx  SettingsView.tsx  TasksView.tsx
app/src/shared/: ipc.ts
app/tests/: engine.integration.test.ts  notion.unit.test.ts  state.unit.test.ts  watcher.integration.test.ts
docs/: MCP.md
mcpb/: manifest.json
scripts/: build-engine.ps1  build-mcpb.mjs  dist.ps1  gen-icons.mjs  make-dev-cert.ps1  sign-sidecar.cjs  trust-dev-cert.ps1
site/: index.html  package-lock.json  package.json  wrangler.jsonc
site/src/: App.tsx  app.css
tests/: engine_selftest.py
